使用本地数据，列表和detail成功

--- a/TestBlazor/Properties/launchSettings.json
+++ b/TestBlazor/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:2759",
-      "sslPort": 44340
+      "applicationUrl": "http://localhost:2670",
+      "sslPort": 44320
     }
   },
   "profiles": {
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Covid.Client": {
+    "TestBlazor": {
       "commandName": "Project",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
